--- a/src/components/game/DressUpSetUp.astro
+++ b/src/components/game/DressUpSetUp.astro
@@ -15,17 +15,11 @@
         </div>
     </section> 
 <style>
-     .small_illustration{
-        width: 100px;
-    }
+   
     .cloth_grid{
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
-        row-gap:100px
+        row-gap:4rem;
     }
-       .position_absolute{
-        position: fixed;
-     }
-
-     
+        
 </style>  
