--- a/src/components/game/DressUpImg.astro
+++ b/src/components/game/DressUpImg.astro
@@ -12,6 +12,16 @@
     .small_illustration {
         width: 4rem;
     }
+
+    .big_illustration{
+        width: 16rem;
+    }
+    
+    .mid_illustration{
+        width: 8rem;
+    }
+
+
    
     .card{
         width: 13rem;
